# nanno

./: .gitignore  README.md  pyproject.toml  run.py
nanno/: core.py  data_loader.py  operations.py
nn_framework/: data_loader.py
tests/: test_nn_framework.py
