[tool.poetry]
name = "nanno"
version = "0.1.0"
description = "A tiny Neural Net Framework"
authors = ["mmhamdy <mohamdy2772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
jupyterlab = "^3.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
